--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -1,5 +1,6 @@
 .div-product {
     padding: 0 60px;
+    height: 100vh;
 }
 
 /* HEADER */
@@ -17,13 +18,36 @@
     color: #000000;
 }
 
-.header-return{
+.header-return {
     display: flex;
     gap: 1.5rem;
 }
 
 .svg-arrow {
     width: 40px;
+    height: 40px;
     background-color: #000000;
     border-radius: 20px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* PRODUCT */
+
+.product{
+    width: 437px;
+}
+
+.img-product{
+    width: 437px;
+    height: 437px;
+    background-color: #f6f6f6;
+}
+
+.info-product{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
